fix footer and skillsets page on mobile

--- a/src/style/_contact.scss
+++ b/src/style/_contact.scss
@@ -1,5 +1,6 @@
 .contact-page {
-  min-height: 89vh;
+  // min-height: 89vh;
+  height: auto;
   width: 100vw;
 
   h1 {
