--- a/src/style/_skillsets.scss
+++ b/src/style/_skillsets.scss
@@ -95,41 +95,8 @@
   }
 }
 
-@media screen and (width: 1024px) {
-  .skillsets {
-    width: 94vw;
-  }
-}
-
-@media screen and (width: 768px) {
-  body {
-    font-size: 12px;
-  }
+@media screen and (min-width: 768px) {
   .skillsets {
     width: 95vw;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .skillsets {
-    width: 90.5vw;
-  }
-}
-
-@media screen and (width: 375px) {
-  .skillsets {
-    width: 89vw;
-  }
-}
-
-@media screen and (width: 360px) {
-  .skillsets {
-    width: 86vw;
-  }
-}
-
-@media screen and (width: 320px) {
-  .skillsets {
-    width: 88vw;
   }
 }
